--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -8,8 +8,6 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup Python
         uses: actions/setup-python@v2
-      - name: Setup R
-        uses: r-lib/actions/setup-r@v1
       - name: Lint (black)
         uses: psf/black@stable
         with:
@@ -23,10 +21,11 @@ jobs:
           pip install coveralls
       - name: Install R dependencies
         run: |
-          install.packages('remotes')
-          install.packages('arrow')
-          remotes::install_github('ursacomputing/arrowbench')"
-        shell: Rscript {0}
+          mkdir R_libs
+          export R_LIBS_USER=$(pwd)/R_libs/
+          R -e "install.packages('remotes', lib='$(pwd)/R_libs/', repos='http://cran.r-project.org')"
+          R -e "install.packages('arrow', lib='$(pwd)/R_libs/', repos='http://cran.r-project.org')"
+          R -e "remotes::install_github('ursacomputing/arrowbench', lib='$(pwd)/R_libs/', repos='http://cran.r-project.org')"
         env:
           LIBARROW_BINARY=TRUE
       - name: Run tests
