--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -8,6 +8,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup Python
         uses: actions/setup-python@v2
+      - name: Setup R
+        uses: r-lib/actions/setup-r@v1
       - name: Lint (black)
         uses: psf/black@stable
         with:
