--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -21,14 +21,14 @@ jobs:
           pip install -r requirements-build.txt
           pip install https://github.com/ursacomputing/conbench/archive/main.zip
           pip install coveralls
-      - name: Install libcurl-devel (for R)
+      - name: Install libcurl (for R arrow)
         run: |
-          sudo apt-get install libcurl-devel
+          sudo apt-get -y install libssl-dev libcurl4-openssl-dev
       - name: Install R dependencies
         run: |
           install.packages('remotes')
           install.packages('arrow')
-          remotes::install_github('ursacomputing/arrowbench')"
+          remotes::install_github('ursacomputing/arrowbench')
         shell: Rscript {0}
         env:
           LIBARROW_BINARY: TRUE
