Revert "Add dependencies = TRUE (#18)"
This reverts commit 8ff7eb4df6548413091012517f6e5dad998be9f7.

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           install.packages('remotes')
           install.packages('arrow')
-          remotes::install_github('ursacomputing/arrowbench', dependencies = TRUE)
+          remotes::install_github('ursacomputing/arrowbench')
         shell: Rscript {0}
         env:
           LIBARROW_BINARY: TRUE
