--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,6 +10,9 @@ jobs:
         uses: actions/setup-python@v2
       - name: Setup R
         uses: r-lib/actions/setup-r@v1
+      - name: Lint (flake8)
+        run: |
+          flake8
       - name: Lint (black)
         uses: psf/black@stable
         with:
