--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -14,10 +14,6 @@ jobs:
         uses: actions/setup-python@v2
       - name: Setup R
         uses: r-lib/actions/setup-r@v1
-      - name: Lint (black)
-        uses: psf/black@20.8b1
-        with:
-          args: ". --check"
       - name: Install Python dependencies
         run: |
           python setup.py develop
@@ -25,15 +21,18 @@ jobs:
           pip install -r requirements-build.txt
           pip install https://github.com/ursacomputing/conbench/archive/main.zip
           pip install coveralls
+      - name: Lint (black)
+        run: |
+          black . --check
+      - name: Lint (flake8)
+        run: |
+          flake8
       - name: Arrow for C++ benchmarks
         run: |
           git clone https://github.com/apache/arrow.git
           pip install arrow/dev/archery
         env:
           ARROW_SRC: $(pwd)/arrow/
-      - name: Lint (flake8)
-        run: |
-          flake8
       - name: Install libcurl (for R arrow)
         run: |
           sudo apt-get -y install libssl-dev libcurl4-openssl-dev
