--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -31,8 +31,7 @@ jobs:
         run: |
           git clone https://github.com/apache/arrow.git
           pip install arrow/dev/archery
-        env:
-          ARROW_SRC: $(pwd)/arrow/
+          export ARROW_SRC=$(pwd)/arrow/
       - name: Install libcurl (for R arrow)
         run: |
           sudo apt-get -y install libssl-dev libcurl4-openssl-dev
