--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -3,6 +3,7 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
+    RSPM: "https://packagemanager.rstudio.com/all/__linux__/focal/latest"
     steps:
       - name: Checkout benchmarks
         uses: actions/checkout@v2
