Run slow tests too

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -32,6 +32,7 @@ jobs:
           git clone https://github.com/apache/arrow.git
           pip install arrow/dev/archery
           export ARROW_SRC=$(pwd)/arrow/
+          echo $ARROW_SRC
       - name: Install libcurl (for R arrow)
         run: |
           sudo apt-get -y install libssl-dev libcurl4-openssl-dev
@@ -45,7 +46,7 @@ jobs:
           LIBARROW_BINARY: TRUE
       - name: Run tests
         run: |
-          coverage run --source benchmarks -m pytest --run-slow benchmarks/tests/
+          coverage run --source benchmarks -m pytest -x --run-slow benchmarks/tests/
       - name: Publish coverage
         run: |
           coveralls --service=github
