--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -20,11 +20,11 @@ jobs:
           
       - name: Install Python dependencies
         run: |
-          python setup.py develop
-          pip install -r requirements-test.txt
-          pip install -r requirements-build.txt
-          pip install https://github.com/ursacomputing/conbench/archive/main.zip
-          pip install coveralls
+          python3 setup.py develop
+          pip3 install -r requirements-test.txt
+          pip3 install -r requirements-build.txt
+          pip3 install https://github.com/ursacomputing/conbench/archive/main.zip
+          pip3 install coveralls
           
       - name: Run Tests
         run: |
