--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -16,7 +16,13 @@ jobs:
       - uses: actions/checkout@v2
  
       - name: Setup Python
-        uses: actions/setup-python@v2
+        run: |
+          sudo apt update
+          python3 -V
+          sudo apt install software-properties-common
+          sudo add-apt-repository ppa:deadsnakes/ppa -y
+          sudo apt install python3.9
+          sudo apt install -y python3-pip
           
       - name: Install Python dependencies
         run: |
