--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -24,7 +24,7 @@ jobs:
           
       - name: Setup Conbench
         run: |
-          yum install postgresql-devel
+          yum install postgresql-devel -y
           git clone https://github.com/ursacomputing/conbench.git
           cd conbench
           pip3.9 install -r requirements-test.txt
