--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -35,6 +35,6 @@ jobs:
       - name: Run Tests
         run: |
           echo "alias python='/usr/local/bin/python3.9'" >> ~/.bashrc
-          sorce ~/.bashrc
+          source ~/.bashrc
           pytest -vv benchmarks/tests/test_dataset_filter_benchhmark.py
 
