Copy python3.9 to python3

--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -2,9 +2,9 @@ name: Run Benchmarks
 
 on:
   push:
-    branches: [ skyhookdm-workflow ]
+    branches: [ skyhookdm-workflow, debug ]
   pull_request:
-    branches: [ skyhookdm-workflow ]
+    branches: [ skyhookdm-workflow, debug ]
 
 jobs:
 
