--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -42,4 +42,15 @@ jobs:
           cp /usr/local/bin/python3.9 /usr/local/bin/python
           sh integration_ceph.sh
           pytest -vv benchmarks/tests/test_dataset_filter_benchhmark.py
+          
+      - name: Save results as JSON
+        run: |
+          cd benchmarks/
+          mkdir artifacts
+          conbench dataset-filter ALL > artifacts/dataset-filter-output.json
+          
+      - uses: actions/upload-artifact@v2
+        with:
+          name: my-artifact
+          path: benchmarks/artifacts/dataset-filter-output.json
 
