--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,5 +1,9 @@
 name: build
-on: [push, pull_request]
+on:
+  push:
+    branches: [ skyhookdm-workflow, debug ]
+  pull_request:
+    branches: [ skyhookdm-workflow, debug ]
 jobs:
   build:
     runs-on: ubuntu-latest
