--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -52,9 +52,20 @@ jobs:
           mkdir $(date '+%Y-%m-%d')/${{ github.sha }} 
           cd ..  
           conbench dataset-filter ALL | awk 'NR>2' > skyhookdm-benchmarks/$(date '+%Y-%m-%d')/${{ github.sha }}/dataset-filter-output.json
-          ls
-          cd skyhookdm-benchmarks/$(date '+%Y-%m-%d')/${{ github.sha }}
-          ls
-          cat dataset-filter-output.json
-
+          
+      - name: Commit files
+        run: |
+          cd benchmarks/skyhookdm-benchmarks
+          git config --local user.email "rahulagrawal799110@gmail.com"
+          git config --local user.name "rahul799"
+          git add $(date '+%Y-%m-%d')/*
+          git commit -m "JSONS added" -a
+        
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: 'main'
+          repository: 'uccross/skyhookdm-benchmarks'
+          
 
