--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -41,7 +41,7 @@ jobs:
         run: |
           cp /usr/local/bin/python3.9 /usr/local/bin/python
           sh integration_ceph.sh
-          pytest -vv benchmarks/tests/test_dataset_filter_benchhmark.py
+          #pytest -vv benchmarks/tests/test_dataset_filter_benchhmark.py
           
       - name: Save results as JSON
         run: |
