--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -49,13 +49,13 @@ jobs:
           cd benchmarks/
           git clone https://github.com/uccross/skyhookdm-benchmarks.git
           cd skyhookdm-benchmarks
-          mkdir -p benchmarks-result/${{ env.DATE }}
-          mkdir benchmarks-result/${{ env.DATE }}/${{ github.sha }} 
+          mkdir -p benchmarks-result/${{ env.CURRENT_DATE }}
+          mkdir benchmarks-result/${{ env.CURRENT_DATE }}/${{ github.sha }} 
           cd ..  
-          for i in 1 2 5 10 14; do    conbench dataset-selectivity-column-parquet --selectivity=$i ALL | awk 'NR>2' > skyhookdm-benchmarks/benchmarks-result/${{ env.DATE }}/${{ github.sha }}/dataset-selectivity-${i}-column-parquet.json; done
-          for i in 1 2 5 10 14; do    conbench dataset-selectivity-column-rados --selectivity=$i ALL | awk 'NR>2' > skyhookdm-benchmarks/benchmarks-result/${{ env.DATE }}/${{ github.sha }}/dataset-selectivity-${i}-column-rados.json; done
-          for i in 1 10 25 50 75 90 99 100; do    conbench dataset-selectivity-row-parquet --selectivity=$i ALL | awk 'NR>2' > skyhookdm-benchmarks/benchmarks-result/${{ env.DATE }}/${{ github.sha }}/dataset-selectivity-${i}-row-parquet.json; done
-          for i in 1 10 25 50 75 90 99 100; do    conbench dataset-selectivity-row-rados --selectivity=$i ALL | awk 'NR>2' > skyhookdm-benchmarks/benchmarks-result/${{ env.DATE }}/${{ github.sha }}/dataset-selectivity-${i}-row-rados.json; done
+          for i in 1 2 5 10 14; do    conbench dataset-selectivity-column-parquet --selectivity=$i ALL | awk 'NR>2' > skyhookdm-benchmarks/benchmarks-result/${{ env.CURRENT_DATE }}/${{ github.sha }}/dataset-selectivity-${i}-column-parquet.json; done
+          for i in 1 2 5 10 14; do    conbench dataset-selectivity-column-rados --selectivity=$i ALL | awk 'NR>2' > skyhookdm-benchmarks/benchmarks-result/${{ env.CURRENT_DATE }}/${{ github.sha }}/dataset-selectivity-${i}-column-rados.json; done
+          for i in 1 10 25 50 75 90 99 100; do    conbench dataset-selectivity-row-parquet --selectivity=$i ALL | awk 'NR>2' > skyhookdm-benchmarks/benchmarks-result/${{ env.CURRENT_DATE }}/${{ github.sha }}/dataset-selectivity-${i}-row-parquet.json; done
+          for i in 1 10 25 50 75 90 99 100; do    conbench dataset-selectivity-row-rados --selectivity=$i ALL | awk 'NR>2' > skyhookdm-benchmarks/benchmarks-result/${{ env.CURRENT_DATE }}/${{ github.sha }}/dataset-selectivity-${i}-row-rados.json; done
           
       - name: Make Comparision plot
         run: |
@@ -70,7 +70,7 @@ jobs:
           cd benchmarks/skyhookdm-benchmarks
           git config --local user.email "rahulagrawal799110@gmail.com"
           git config --local user.name "rahul799"
-          git add benchmarks-result/${{ env.DATE }}/*
+          git add benchmarks-result/${{ env.CURRENT_DATE }}/*
           git commit -m "JSONS added" -a
           git push https://$USERNAME:$REPO_KEY@github.com/uccross/skyhookdm-benchmarks.git
         env:
