--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -64,6 +64,7 @@ jobs:
           cd scripts/
           echo "github.sha=${{ github.sha }}" >> .env
           python3.9 generate_column_selectivity_plot.py
+          python3.9 generate_row_selectivity_plot.py
 
       - name: Commit files
         run: |
@@ -84,4 +85,7 @@ jobs:
           body: | 
             Build output of commit ${{ github.sha }}
             Comparision Plot
-            ![Plot](https://github.com/uccross/skyhookdm-benchmarks/blob/main/benchmarks-result/${{ env.CURRENT_DATE }}/${{ github.sha }}/result.png)
+            ![Plot](raw.githubusercontent.com/uccross/skyhookdm-benchmarks/blob/main/benchmarks-result/${{ env.CURRENT_DATE }}/${{ github.sha }}/column-result.png)
+            Column Plot
+            ![Plot](raw.githubusercontent.com/uccross/skyhookdm-benchmarks/blob/main/benchmarks-result/${{ env.CURRENT_DATE }}/${{ github.sha }}/row-result.png)
+            Row Plot
