--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -7,6 +7,7 @@ jobs:
       # Note, if ubuntu-latest changes to a different release, we will need to 
       # swap `focal` below to what that new name is for that release.
       RSPM: "https://packagemanager.rstudio.com/all/__linux__/focal/latest"
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Checkout benchmarks
         uses: actions/checkout@v2
