Use our nightlies repo to install arrow

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Install R dependencies
         run: |
           install.packages('remotes')
-          install.packages('arrow')
+          install.packages('arrow', repos = c('https://arrow-r-nightly.s3.amazonaws.com', getOption('repos')))
           remotes::install_github('ursacomputing/arrowbench')
         shell: Rscript {0}
         env:
