--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -22,7 +22,7 @@ jobs:
           src: .
       - name: Install Python dependencies
         run: |
-          python setup.py develop
+          pip install -e .
           pip install -r requirements.txt
           pip install -r requirements-dev.txt
           pip install https://github.com/ursacomputing/conbench/archive/main.zip
