--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -26,10 +26,7 @@ jobs:
           src: .
       - name: Install Python dependencies
         run: |
-          pip install -e .
-          pip install -r requirements-dev.txt
-          pip install https://github.com/ursacomputing/conbench/archive/main.zip
-          pip install coveralls
+          pip install -e '.[dev]'
       - name: Lint (flake8)
         run: |
           flake8
