--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 click
 pandas
 pyarrow
-benchadapt@git+https://github.com/conbench/conbench.git@81a0272cc2#subdirectory=benchadapt/python
-benchclients@git+https://github.com/conbench/conbench.git@81a0272cc2#subdirectory=benchclients/python
+benchadapt@git+https://github.com/conbench/conbench.git@7bbed2b036#subdirectory=benchadapt/python
+benchclients@git+https://github.com/conbench/conbench.git@7bbed2b036#subdirectory=benchclients/python
+conbenchlegacy@git+https://github.com/conbench/conbench.git@7bbed2b036#subdirectory=legacy
